Handle NFSMW specific packets (PC/PS2)